added profile image; edited order of content

--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vincent's Portfolio Project</title>
-</head>
-<body>
-    <h1>Vincent Michael Piña</h1>
-    <ul>
-        <li>Location: Austin, TX</li>
-        <li>Contact</li>
-        <li>GitHub </li>
-        <li>Linkedin</li>
-    </ul>
-    <h2>Software Engineer</h2>
-        <p><strong>Keyword 1, Keyword 2, Keyword 3</strong></p>
-        <h3>Introduction</h3>
-        <p>Quidem fuga rerum, alias ex repudiandae veniam delectus culpa, accusamus aut quo harum deserunt ipsum et sed vero, magnam quis dicta asperiores soluta. Praesentium reiciendis officiis sapiente saepe, placeat vel ex doloremque ipsa veritatis aliquam dolores quae dignissimos eligendi molestias quidem illo laborum! Sapiente, saepe laboriosam. Quaerat voluptatibus, ad cum eligendi neque aperiam placeat voluptate voluptatum voluptates fuga distinctio similique perspiciatis reiciendis unde vitae quam laudantium reprehenderit sequi! Iste qui perspiciatis at consequuntur accusamus, fuga sunt libero facere voluptatum beatae quis, laboriosam quia, tenetur omnis maxime vero dolorum fugiat nesciunt? Cupiditate commodi cum sapiente neque consectetur laudantium cumque? Harum, itaque.</p>
-</body>
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Vincent's Portfolio Project</title>
+   </head>
+   <body>
+      <h1>Vincent Michael Piña</h1>
+      <img src="./images/profile.jpg" alt="Vincent Michael Piña profile picture" />
+      <h2>Software Engineer</h2>
+      <p><strong>Keyword 1, Keyword 2, Keyword 3</strong></p>
+      <ul>
+         <li>Location: Austin, TX</li>
+         <li>Contact</li>
+         <li>GitHub </li>
+         <li>Linkedin</li>
+      </ul>
+      <h3>Introduction</h3>
+      <p>Quidem fuga rerum, alias ex repudiandae veniam delectus culpa, accusamus aut quo harum deserunt ipsum et sed vero, magnam quis dicta asperiores soluta. Praesentium reiciendis officiis sapiente saepe, placeat vel ex doloremque ipsa veritatis aliquam dolores quae dignissimos eligendi molestias quidem illo laborum! Sapiente, saepe laboriosam. Quaerat voluptatibus, ad cum eligendi neque aperiam placeat voluptate voluptatum voluptates fuga distinctio similique perspiciatis reiciendis unde vitae quam laudantium reprehenderit sequi! Iste qui perspiciatis at consequuntur accusamus, fuga sunt libero facere voluptatum beatae quis, laboriosam quia, tenetur omnis maxime vero dolorum fugiat nesciunt? Cupiditate commodi cum sapiente neque consectetur laudantium cumque? Harum, itaque.</p>
+   </body>
 </html>
