added revised profile pictures

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    </head>
    <body>
       <h1>Vincent Michael Piña</h1>
-      <img src="./images/profile.jpg" alt="Vincent Michael Piña profile picture" />
+      <img src="./images/profile_border_v2.png" alt="Vincent Michael Piña profile picture" />
       <h2>Software Engineer</h2>
       <p><strong>Keyword 1, Keyword 2, Keyword 3</strong></p>
       <ul>
