revised div to richer elements, added contact section with simple form

--- a/index.html
+++ b/index.html
@@ -6,17 +6,43 @@
       <title>Vincent's Portfolio Project</title>
    </head>
    <body>
-      <h1>Vincent Michael Piña</h1>
-      <img src="./images/profile_border_v2.png" alt="Vincent Michael Piña profile picture" />
+        <header>
+            <div class="name-header">
+            <h1>Vincent Michael Piña </h1>
+            </div>
+                <nav id="nav-buttons">
+                        <ul>
+                                <li>Home</li>
+                                <li><a href="#introduction">About</a></li>
+                                <li>Contact</li>    
+                        </ul> 
+                </nav>    
+        </header>
+<main>
+    <section id="developer-profile">
+      <img src="./images/profile_border_v2.png" width=300 alt="Vincent Michael Piña profile picture" />
       <h2>Software Engineer</h2>
-      <p><strong>Keyword 1, Keyword 2, Keyword 3</strong></p>
-      <ul>
-         <li>Location: Austin, TX</li>
-         <li>Contact</li>
-         <li>GitHub </li>
-         <li>Linkedin</li>
-      </ul>
-      <h3>Introduction</h3>
-      <p>Quidem fuga rerum, alias ex repudiandae veniam delectus culpa, accusamus aut quo harum deserunt ipsum et sed vero, magnam quis dicta asperiores soluta. Praesentium reiciendis officiis sapiente saepe, placeat vel ex doloremque ipsa veritatis aliquam dolores quae dignissimos eligendi molestias quidem illo laborum! Sapiente, saepe laboriosam. Quaerat voluptatibus, ad cum eligendi neque aperiam placeat voluptate voluptatum voluptates fuga distinctio similique perspiciatis reiciendis unde vitae quam laudantium reprehenderit sequi! Iste qui perspiciatis at consequuntur accusamus, fuga sunt libero facere voluptatum beatae quis, laboriosam quia, tenetur omnis maxime vero dolorum fugiat nesciunt? Cupiditate commodi cum sapiente neque consectetur laudantium cumque? Harum, itaque.</p>
+            <p><strong>Keyword 1, Keyword 2, Keyword 3</strong></p>
+                <ul>
+                    <li>Location: Austin, TX</li>
+                    <li>GitHub </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/vincent-pina/" target="_blank">Linkedin</a>
+                    </li>
+                </ul>
+    </section>
+    <section id="introduction">
+        <h3>Introduction</h3>
+        <p>Quidem fuga rerum, alias ex repudiandae veniam delectus culpa, accusamus aut quo harum deserunt ipsum et sed vero, magnam quis dicta asperiores soluta. Praesentium reiciendis officiis sapiente saepe, placeat vel ex doloremque ipsa veritatis aliquam dolores quae dignissimos eligendi molestias quidem illo laborum! Sapiente, saepe laboriosam. Quaerat voluptatibus, ad cum eligendi neque aperiam placeat voluptate voluptatum voluptates fuga distinctio similique perspiciatis reiciendis unde vitae quam laudantium reprehenderit sequi! Iste qui perspiciatis at consequuntur accusamus, fuga sunt libero facere voluptatum beatae quis, laboriosam quia, tenetur omnis maxime vero dolorum fugiat nesciunt? Cupiditate commodi cum sapiente neque consectetur laudantium cumque? Harum, itaque.</p>
+    </section>
+    <section id="contact">
+        <h3>Contact</h3>
+            <form action="#" method="get">
+                <input type="text" name="first-name" />
+                <button type="submit">send</button>
+            </form>
+    </section>
+</main>
+<footer>Footer Placeholder</footer>
    </body>
 </html>
