updated about section with real text

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <nav id="nav-buttons">
                         <ul>
                                 <li>Home</li>
-                                <li><a href="#introduction">About</a></li>
+                                <li><a href="#about">About</a></li>
                                 <li>Contact</li>    
                         </ul> 
                 </nav>    
@@ -24,16 +24,16 @@
       <h2>Software Engineer</h2>
             <p><strong>Keyword 1, Keyword 2, Keyword 3</strong></p>
                 <ul>
-                    <li>Location: Austin, TX</li>
-                    <li>GitHub </li>
-                    <li>
-                        <a href="https://www.linkedin.com/in/vincent-pina/" target="_blank">Linkedin</a>
-                    </li>
+                    <li>Austin, TX</li>
+                    <li><a href="https://github.com/ViMiPina?tab=repositories" target="_blank">GitHub</a></li>
+                    <li><a href="https://www.linkedin.com/in/vincent-pina/" target="_blank">Linkedin</a></li>
                 </ul>
     </section>
-    <section id="introduction">
-        <h3>Introduction</h3>
-        <p>Quidem fuga rerum, alias ex repudiandae veniam delectus culpa, accusamus aut quo harum deserunt ipsum et sed vero, magnam quis dicta asperiores soluta. Praesentium reiciendis officiis sapiente saepe, placeat vel ex doloremque ipsa veritatis aliquam dolores quae dignissimos eligendi molestias quidem illo laborum! Sapiente, saepe laboriosam. Quaerat voluptatibus, ad cum eligendi neque aperiam placeat voluptate voluptatum voluptates fuga distinctio similique perspiciatis reiciendis unde vitae quam laudantium reprehenderit sequi! Iste qui perspiciatis at consequuntur accusamus, fuga sunt libero facere voluptatum beatae quis, laboriosam quia, tenetur omnis maxime vero dolorum fugiat nesciunt? Cupiditate commodi cum sapiente neque consectetur laudantium cumque? Harum, itaque.</p>
+    <section id="about">
+        <h3>Hello World... I'm Vincent</h3>
+        <p>My expertise in business comes from contributing to many different markets, industries and people. My success come from my white glove style customer service, application of technology in a modern business and my drive to be a leader with a supportive and collaborative mindset. I'm a knowledge seeker and believe there are always new ideas and perspectives to incorporate towards overall success. </p>
+        <p>4 years experience in marketing techonologies and shopping platforms. From this experience I have developed an expert understanding of feed requirements for dynamic remarketing ads and shopping ads, in addition, to full database management for enterprise level clientele. </p>
+        <p>I have a strong passion for creating technical solutions to complex problems and look forward to collaborating my skills to take you to the next level. </p>
     </section>
     <section id="contact">
         <h3>Contact</h3>
