added skills section

--- a/index.html
+++ b/index.html
@@ -37,6 +37,40 @@
         <p>4 years experience in marketing techonologies and shopping platforms. From this experience I have developed an expert understanding of feed requirements for dynamic remarketing ads and shopping ads, in addition, to full database management for enterprise level clientele. </p>
         <p>I have a strong passion for creating technical solutions to complex problems and look forward to collaborating my skills to take you to the next level. </p>
     </section>
+    <section>
+        <h3>Skills</h3>
+        <section>
+            <h3>Frontend Development</h3>
+            <ul>
+                <li>HTML5</li>
+                <li>CSS3</li>
+                <li>SASS</li>
+                <li>JavaScript</li>
+                <li>TypeScript</li>
+                <li>React</li>
+            </ul>
+        </section>
+        <section>
+            <h3>Backend Development</h3>
+            <ul>
+                <li>node.js</li>
+                <li>Express</li>
+                <li>Django</li>
+                <li>SQL</li>
+                <li>mongo.db</li>
+            </ul>
+        </section>
+        <section>
+            <h3>Software Engineering</h3>
+            <ul>
+                <li>Unit Testing (Jest, Testing Library)</li>
+                <li>CSS Architecture</li>
+                <li>UML</li>
+                <li>Algorithms</li>
+                <li>Data Structures</li>
+            </ul>
+        </section>
+    </section>
     <section id="contact">
         <h3>Contact</h3>
             <form action="#" method="get">
@@ -44,6 +78,7 @@
                 <button type="submit">send</button>
             </form>
     </section>
+
 </main>
 <footer>Footer Placeholder</footer>
    </body>
