added recent works with placeholders images

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </nav>    
         </header>
 <main>
-    <section id="developer-profile">
+    <section class="developer-profile">
       <img src="./images/profile_border_v2.png" width=300 alt="Vincent Michael Piña profile picture" />
       <h2>Software Engineer</h2>
             <p><strong>Keyword 1, Keyword 2, Keyword 3</strong></p>
@@ -31,14 +31,14 @@
                     <li><a href="https://www.linkedin.com/in/vincent-pina/" target="_blank">Linkedin</a></li>
                 </ul>
     </section>
-    <section id="about">
+    <section class="about">
         <h3>Hello World... I'm Vincent</h3>
         <p>My expertise in business comes from contributing to many different markets, industries and people. My success come from my white glove style customer service, application of technology in a modern business and my drive to be a leader with a supportive and collaborative mindset. I'm a knowledge seeker and believe there are always new ideas and perspectives to incorporate towards overall success. </p>
         <p>4 years experience in marketing techonologies and shopping platforms. From this experience I have developed an expert understanding of feed requirements for dynamic remarketing ads and shopping ads, in addition, to full database management for enterprise level clientele. </p>
         <p>I have a strong passion for creating technical solutions to complex problems and look forward to collaborating my skills to take you to the next level. </p>
     </section>
-    <section>
-        <h3>Skills</h3>
+    <section class="skills">
+        <h2>Skills</h2>
         <section>
             <h3>Frontend Development</h3>
             <ul>
@@ -71,14 +71,24 @@
             </ul>
         </section>
     </section>
-    <section id="contact">
-        <h3>Contact</h3>
+    <section class="recent-work">
+        <h2>My Recent Work</h2>
+        <ul>
+            <li><a href="#"> <img src="https://place-hold.it/300"  alt="HTML CSS Project"></a></li>
+            <li><a href="#"> <img src="https://place-hold.it/300"  alt="HTML CSS Project"></a></li>
+            <li><a href="#"> <img src="https://place-hold.it/300"  alt="HTML CSS Project"></a></li>
+            <li><a href="#"> <img src="https://place-hold.it/300"  alt="HTML CSS Project"></a></li>
+            <li><a href="#"> <img src="https://place-hold.it/300"  alt="HTML CSS Project"></a></li>
+            <li><a href="#"> <img src="https://place-hold.it/300"  alt="HTML CSS Project"></a></li>
+        </ul>
+    </section>
+    <section class="contact">
+        <h2>Contact</h2>
             <form action="#" method="get">
                 <input type="text" name="first-name" />
                 <button type="submit">send</button>
             </form>
-    </section>
-
+        </section>
 </main>
 <footer>Footer Placeholder</footer>
    </body>
