--- a/index.html
+++ b/index.html
@@ -85,11 +85,28 @@
     <section class="contact">
         <h2>Contact</h2>
             <form action="#" method="get">
-                <input type="text" name="first-name" />
-                <button type="submit">send</button>
+                 <div class="form-row">
+                        <label for="email-field">Email:</label>
+                        <input type="email" id="email-field" name="email-field" placeholder="Email Address" />
+                 </div>
+                 <div class="form-row">
+                        <label for="message-area">Message:</label>
+                        <textarea name="message-area" id="message-area"></textarea>
+                 </div>
+                    <button type="submit">Send</button>
             </form>
-        </section>
+    </section>
 </main>
-<footer>Footer Placeholder</footer>
+<footer>
+    <nav>
+        <ul>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Sitemap</a></li>
+            <li><a href="#">Privacy</a></li>
+        </ul>
+    </nav>
+</footer>
    </body>
 </html>
